--- a/templates/project1.html
+++ b/templates/project1.html
@@ -4,7 +4,7 @@
         <meta name="view port">
         
         <title>Simple Portfolio</title>
-        <link rel="stylesheet"href="style.css">
+        <link rel="stylesheet"href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
     <div class="sidebar">
