--- a/templates/project1.html
+++ b/templates/project1.html
@@ -4,7 +4,7 @@
         <meta name="view port">
         
         <title>Simple Portfolio</title>
-        <link rel="stylesheet"href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
     <div class="sidebar">
@@ -20,11 +20,13 @@
         <div id="about"
         class="section">
     <h2>About Me</h2>
-<p>Write something about yourself..</p></div>
+<p>Write something about yourself..</p>
+<button class="about-btn">Click me</button>
+</div>
    <div id="projrcts"class="section">
     <h2>Projects</h2>
     <p>Describe your projrcts here..</p></div>
-        </div>
+     </div>
     </div>
     </body>
     </html>
